--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: ^2.2.0
   firebase_auth: ^1.2.0
   firebase_core: ^1.2.0
+  shared_preferences:
+  animated_text_kit: ^4.2.1
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -48,10 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
