Added Sgned APK Steps, added firebase errors, UI changes made in Leader Board Page, Added version to the bottom of home page, applied Refresh Functionality where user can play again, added constants file for dev and prod, Tested whole application, added information of user in profile section.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   shared_preferences:
   animated_text_kit: ^4.2.1
   provider: ^5.0.0
+  font_awesome_flutter: ^9.1.0
+  package_info:
 
 dev_dependencies:
   flutter_test:
