--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sahil.rollmaster.roll_master">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="roll_master"
+        android:label="Roll Master"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
